# justhtml-html5lib-tests-bench

./: .gitignore  .pre-commit-config.yaml  .python-version  MANIFEST.in  README.md  pyproject.toml
src/html5lib_tests_bench/: cli.py  harness.py  html5lib_dat.py
src/html5lib_tests_bench/js/: dom_tree_serializer.js  fragment_tree_serializer.js
tests/: test_dat_parser.py
